fix: change fractional unit to auto to prevent announcement section from stretching

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ body {
     grid-area: main;
     display: grid;
     grid-template-columns: 4fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-areas:
         'project announce'
         'project trending';
